# learning

./: .gitmodules  First_java.java  Jenkinsfile  file.txt  first_python.py  new.txt  new_1.txt  rule.txt
AOSP/: BinderIPC_InterfaceCreation  BinderIPC_Interface_API_Creation
C/C_or_CPP/: a.out  (+1 more)
C_or_CPP/CPP/UTS/: CMakeLists.txt  Class.cpp  a.out  check.cpp
C_or_CPP/CPP/UTS/MyProject/: first.cpp
General/: insurance
INterview/: a.out  bitwiseAND.cpp
Linux_Internals/: booting_Sequence.txt  os_intro.txt
Logger/: Logger.cpp  Logger.hpp  main.cpp
Practise/: GraphsPatterns  a.out  breakingWalls.cpp  non_decreasing_array.cpp  shortest time when Alice can visit all the vertices if she can choose any vertex as her starting point.cpp  temp.cpp
Problem Solving/: a.out  array_leaders.cpp  checkSum.cpp  kadanes_algorithm_1  length_of_longest_consecutive_sequence.cpp  maximum_subarray_sum.cpp  next_permutation.cpp  rearrange_array_elements_by_sign.cpp  stock_buy_and_sell.cpp
SOME_IP/: ReadMe.txt
Server/: a.out  server.cpp
UTS_CPP/: CMakeLists.txt  ReadMe.txt
UTS_CPP/Notes_plus_concepts/: 1_basics_and_Assertions.cpp  1_basics_and_assertion_types.txt  2_fatal_failure.cpp  3_non_fatal_failure.cpp  4_string_cmp.cpp  5_multiple_assetions_in_test.cpp  Wrking_cmakelists.txt  a.out
UTS_CPP/Notes_plus_concepts/Mocks/: info_mocks_part2
UTS_CPP/Notes_plus_concepts/TextFixtures/: ReadMe.txt  a.out  ex1_without_optimization.cpp  ex2_using_fixture.cpp
UTS_CPP/Udemy Course/: Linux_vs_Windows
UTS_CPP/src/: class1.cpp  main.cpp  main.h
UTS_CPP/tests/: test_main.cpp
(+360 files in other folders)
